<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Tips Calculator</string>
    <string name="nationText">Country:</string>
    <string name="situationText">Situation:</string>
    <string name="tipsRateText">Tips Rate:</string>
    <string name="tipsRate">0%</string>
    <string name="modeText">Mode:</string>
    <string name="modeSwitch">Ave/Ind</string>
    <string name="default_situation">N/A</string>

</resources>
