        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/table">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:text="@string/nationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:id="@+id/textView"
                        android:layout_below="@+id/situationSpinner"
                        android:layout_alignParentStart="true"
                        android:layout_column="1" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:id="@+id/nationSpinner"
                        android:layout_alignBottom="@+id/nationText"
                        android:layout_toEndOf="@+id/nationText"
                        android:layout_column="2"
                        android:spinnerMode="dropdown"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:text="@string/situationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:id="@+id/nationText"
                        android:layout_below="@+id/textView"
                        android:layout_alignParentStart="true"
                        android:layout_column="1" />

                    <Spinner
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/situationSpinner"
                        android:layout_column="2"
                        android:spinnerMode="dropdown" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:text="@string/tipsRateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:id="@+id/tipsRate"
                        android:layout_below="@+id/textView"
                        android:layout_alignParentStart="true"
                        android:layout_column="1" />

                    <TextView
                        android:text="@string/tipsRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:id="@+id/tipsRateView"
                        android:layout_below="@+id/textView"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="20dp"
                        android:layout_column="2"
                        android:layout_gravity="center_vertical" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:text="@string/modeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:id="@+id/mode"
                        android:layout_below="@+id/textView"
                        android:layout_alignParentStart="true"
                        android:layout_column="1" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modeSwitch"
                        android:id="@+id/mode"
                        android:layout_column="2"
                        android:checked="true" />
                </TableRow>
            </TableLayout>

        </RelativeLayout>
